alb-listener.tf
resource "aws_lb_listener" "app_listener" {
    load_balancer_arn = aws_lb.app_lb.arn 
    port = 80 
    protocol = "HTTP" 
  default_action {
  type = "forward"
  target_group_arn = aws_lb_target_group.app_tg.arn
 }
}
